styles/styles.css
/*-> General styles - Normalize*/
/* @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital@0;1&display=swap'); */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'IBM Plex Sans', sans-serif;
}
/* body {
  width: 100vw;
} */
.side-section-margins {
  width: 90%;
  margin: 0 auto;
}

h1 {
  font-family: 'IBM Plex Sans', sans-serif;
  font-size: 2.2rem;
  color: #060a24;
  font-weight: normal;
}

p {
  font-family: 'IBM Plex Mono', monospace;
  font-size: 0.85rem;
  color: #060a24;
}

/*->320px Navbar styles */
nav {
  /* flex properties */
  display: flex;
  align-items: center;
  justify-content: space-between;
  /* position */
  position: sticky;
  top: 0;
  z-index: 1;
  /* dimensions */
  height: 6vh;
  /* colors */
  background-color: white;
  padding: 25px 5% !important;
}
/* Mouse efect when mouse is over the logo icon */
nav a img:hover {
  transform: scale(1.1);
  transition: all 0.3s ease-in;
  /* margin: 16px 0; */
}

.menu-desplazable {
  position: fixed;
  z-index: 10;
  right: 0;
  width: 100%;
  top: 7vh;
  background-color: #0000ec;
  cursor: pointer;
  transform: translate(100%);
  transition: all 0.4s ease;
}

.menu-desplazable ul {
  display: flex;
  flex-direction: column;
  width: 100%;
  list-style: none;
}

.menu-desplazable ul li a {
  position: relative;
  display: flex;
  height: 100%;
  padding: 6% 5%;
  color: white;
  text-decoration: none;
}

.menu-desplazable ul li a:hover {
  text-decoration: line-through;
  font-weight: 500;
}

/* Deslizable menu animation */
/*  https://stackoverflow.com/questions/26449590/make-css-pseudoelement-before-same-height-as-main-element*/
.menu-desplazable ul li a:before {
  position: absolute;
  content: '';
  top: 0;
  bottom: 0;
  right: 0;
  width: 0%;
  background-color: rgba(255, 255, 255, 0);
  transition: all 0.3s ease-out;
}

.menu-desplazable ul li a:hover:before {
  width: 100%;
  background-color: rgba(255, 255, 255, 0.4);
  transition: all 0.3s ease-in;
}

/* Checkbox custom styles */
#menu-checkbox {
  display: none;
}
#menu-checkbox:checked ~ .menu-desplazable {
  transform: translate(0);
}
.menu-icon-container {
  position: relative;
  height: 2rem;
  width: 2rem;
  padding: 0.1rem;
  cursor: pointer;
}
.linea {
  height: 10%;
  width: 75%;
  background-color: rgb(0, 0, 0);
  border-radius: 10px;
  transition: all 0.2s ease;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}
.linea-top {
  top: 25%;
}
.linea-low {
  top: 75%;
}
#menu-checkbox:checked + .label-menu-checkbox .menu-icon-container .linea-med {
  opacity: 0;
}
#menu-checkbox:checked + .label-menu-checkbox .menu-icon-container .linea-top {
  top: 50%;
  transform: translate(-50%, -50%) rotate(45deg);
  background-color: red;
}
#menu-checkbox:checked + .label-menu-checkbox .menu-icon-container .linea-low {
  top: 50%;
  transform: translate(-50%, -50%) rotate(-45deg);
  background-color: red;
}

/*->320px Header styles */
header {
  padding: 24px 0;
  /* text-align: center; */
}
header h1 {
  max-width: 80%;
}
header p {
  visibility: visible;
  margin-top: 1rem;
  max-width: 100%;
}

header p:before {
  visibility: hidden;
  content: 'El portal de podcasts que explora el mundo de la programación y la tecnología. Nuevos episodios, todos los jueves cada 15 días.';
  position: absolute;
}
.custom-button {
  margin: 36px auto 0;
  /*Center*/
}

/*->320px Episodes section styles */
section.episodes {
  position: relative;
}
.episodes .clip-path-background {
  position: absolute;
  width: 100vw;
  height: 100%;
  background-color: blue;
  clip-path: polygon(0% 3%, 100% 0, 100% 97%, 0% 100%);
}

.episodes .episodes-container {
  position: relative;
  margin: 20% 0 35% 0;
}
.episodes-container h1 {
  color: white;
  margin: 0 5% 20px;
}
.episodes-wrapper {
  position: relative;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  /* align-content: space-around; */
  margin: 0 5%;
}
.episode-iframe {
  width: 100%;
  margin: 2% 0;
}
@keyframes {
}

/*->320px History section styles */
section.history {
  /* border: dashed 1px yellow; */
  margin-bottom: 54px;
}

section.history img {
  position: relative;
  display: block;
  /* display: ; */
  width: 320px;
  margin: 0 auto;

  margin-top: -100px;
  /* background-color: red; */
}
section.history p {
  text-align: justify;
  /* font-family: IBMPlexMono; */
  font-size: 14px;
  color: #060a24;
  /* letter-spacing: 0; */
  line-height: 22px;
  /* font-size: 14px; */
}
/*->320px Stellar guests section styles */
section.stellar-guests {
  /* border: dashed 1px crimson; */
}
section.stellar-guests .images-container {
  display: flex;
  flex-flow: wrap;
  margin: 20px 0;
  background-color: blanchedalmond;
}
section.stellar-guests .images-container img {
  width: 100%;
}
/*->320px  Our topics section styles */
section.our-topics {
  /* border: dashed 1px darksalmon; */
}
.cards-container {
  display: flex;
  flex-flow: wrap column;
  align-content: center;
}
.card-wrapper {
  display: inline-block;
  text-align: center;
  /* background-color: blanchedalmond; */
  width: 250px;
  margin: 30px 0;
}
.card-image {
  width: 104px;
}
.card-text {
  display: block;
  /* font-family: IBMPlexSans-SemiBold; */
  font-weight: 600;
  font-size: 24px;
  color: #060a24;
  letter-spacing: 0;
  text-align: center;
}

@keyframes shine {
  10% {
    opacity: 1;
    top: -30%;
    left: -30%;
    transition-property: left, top, opacity;
    transition-duration: 0.7s, 0.7s, 0.15s;
    transition-timing-function: ease;
  }
  100% {
    opacity: 0;
    top: -30%;
    left: -30%;
    transition-property: left, top, opacity;
  }
}
/*->320px  Last novelties styles */
section.last-novelties {
  /* border: dashed 1px dimgray; */
  position: relative;
}
section.last-novelties .clip-path-background {
  position: absolute;
  width: 100vw;
  height: 100%;
  background-color: blue;
  clip-path: polygon(0% 10%, 100% 0, 100% 100%, 0% 100%);
}
section.last-novelties .container {
  /* display: flex;
  flex-direction: column; */
  align-items: center;
  position: relative;
  margin: 20% 0 20% 0;
}
section.last-novelties h1 {
  text-align: center;
  color: white;
  margin: 0 5% 20px;
}
/*->320px Footer styles */
footer {
  padding: 5% 8%;
  text-align: center;
}
footer p {
  font-size: 14px;
  color: #060a24;
  letter-spacing: 1.2px;
  line-height: 22px;
}
footer div {
  display: flex;
  justify-content: space-between;
}

/*-> MEDIA QUERIES START FROM HERE */
/* https://getflywheel.com/layout/css-breakpoints-responsive-design-how-to/ */
/* https://dev.to/rstacruz/what-media-query-breakpoints-should-i-use-292c */
/* smartphones, portrait iPhone, portrait 480x320 phones (Android) */
/* @media (min-width: 320px) {
} */

@media (min-width: 480px) {
  /* smartphones, Android phones, landscape iPhone */
  /*->480px Navbar */
  .menu-icon-container {
    display: none;
  }
  .menu-desplazable {
    position: relative;
    /* z-index: 10; */
    top: 0vh;
    transform: translate(0%);
    background-color: transparent;
  }
  .menu-desplazable ul {
    flex-direction: row;
  }
  .menu-desplazable ul li a {
    margin-left: 15px;
    padding: 0;
    color: #060a24;
  }
  .menu-desplazable ul li a:before {
    display: none;
  }
  /*->480px Header */
  header {
    padding: 24px 0;
    /* text-align: center; */
  }
  header h1 {
    max-width: 100%;
  }
}

/* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
/* @media (min-width: 640px) {
} */
@media (min-width: 768px) {
  /* tablet, landscape iPad, lo-res laptops ands desktops */
  /*->768px Header */
  header {
    padding: 100px 0 16px 0;
  }
  header h1 {
    font-size: 2.8rem;
  }
  header p {
    visibility: hidden;
  }
  header p:before {
    visibility: visible;
    max-width: 68%;
  }
  header .custom-button {
    margin: 36px 0; /*Center*/
  }
  /*->768px Episodes section styles */
  .episodes .episodes-container {
    position: relative;
    margin: 15% 0 15% 0;
  }
  .episodes .clip-path-background {
    clip-path: polygon(0% 7%, 100% 0, 100% 93%, 0% 100%);
  }
  .episode-iframe {
    width: 47%;
    margin: 1% 0;
  }
}

@media (min-width: 1024px) {
  /*992 is also used*/
  /* big landscape tablets, laptops, and desktops */
  nav {
    padding: 25px 6% !important;
  }
  .side-section-margins {
    width: 80%;
    margin: 0 auto;
  }
  /*->768px Navbar */
  .menu-desplazable ul li a {
    margin-left: 48px;
  }
  /*->768px Header */
  header {
    padding: 130px 0 16px 0;
  }
  header h1 {
    font-size: 3.5rem;
  }
  header p {
    visibility: hidden;
  }
  header p:before {
    visibility: visible;
    max-width: 52%;
  }
  header .custom-button {
    margin: 72px 0 0 0; /*Center*/
  }
  /*->768px Episodes section styles */
  .episodes .episodes-container {
    position: relative;
    margin: 6% 0 10% 0;
  }
  .episodes-container h1 {
    margin: 0 10% 20px;
  }
}
@media (min-width: 1440px) {
  /* hi-res laptops and desktops */
  header p {
    visibility: hidden;
  }
  header p:before {
    visibility: visible;
    max-width: 36%;
  }
}
/*?ANIMATIONS */
.circles {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  /* overflow: hidden; */
}

.circles li {
  position: absolute;
  display: block;
  /* list-style: none; */
  width: 20px;
  height: 20px;
  background: rgba(255, 255, 255, 0.5);
  animation: animate 25s linear infinite;
  bottom: -100px;
}

.circles li:nth-child(1) {
  left: 25%;
  width: 80px;
  height: 80px;
  animation-delay: 0s;
}

.circles li:nth-child(2) {
  left: 10%;
  width: 20px;
  height: 20px;
  animation-delay: 2s;
  animation-duration: 12s;
}

.circles li:nth-child(3) {
  left: 70%;
  width: 20px;
  height: 20px;
  animation-delay: 4s;
}

.circles li:nth-child(4) {
  left: 40%;
  width: 60px;
  height: 60px;
  animation-delay: 0s;
  animation-duration: 18s;
}

.circles li:nth-child(5) {
  left: 65%;
  width: 20px;
  height: 20px;
  animation-delay: 0s;
}

.circles li:nth-child(6) {
  left: 75%;
  width: 110px;
  height: 110px;
  animation-delay: 3s;
}

.circles li:nth-child(7) {
  left: 35%;
  width: 150px;
  height: 150px;
  animation-delay: 7s;
}

.circles li:nth-child(8) {
  left: 50%;
  width: 25px;
  height: 25px;
  animation-delay: 15s;
  animation-duration: 45s;
}

.circles li:nth-child(9) {
  left: 20%;
  width: 15px;
  height: 15px;
  animation-delay: 2s;
  animation-duration: 35s;
}

.circles li:nth-child(10) {
  left: 85%;
  width: 150px;
  height: 150px;
  animation-delay: 0s;
  animation-duration: 11s;
}

@keyframes animate {
  0% {
    transform: translateY(0) rotate(0deg);
    opacity: 1;
    border-radius: 0;
  }

  100% {
    transform: translateY(-3000px) rotate(720deg);
    opacity: 0;
    border-radius: 50%;
  }
}

